--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/nodemailer": "^6.4.13",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supports-color": "^8.1.3",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
